--- a/operator/static/style.css
+++ b/operator/static/style.css
@@ -1,3 +1,8 @@
+html, body {
+    overflow: hidden;
+    position: relative;
+    height: 100%;
+}
 .wrapper-top {
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
@@ -6,8 +11,8 @@
 .wrapper-bottom {
     display: grid;
     grid-template-columns: 25% 75%;
-    padding: 0px 100px 100px 100px;
-    height: 50vh;
+    padding: 0px 100px 300px 100px;
+    height: 90vh;
 }
 .start-button {
     margin-top: auto;
@@ -28,5 +33,9 @@
     padding: 10px;
     border: 1px; 
     border-style: solid; 
-    height: 100%;
+    height: 60vh;
+    overflow-y: scroll;
+}
+.log-window-title {
+    text-align: center;
 }
