logs saved in text files and stop car after stop command

--- a/operator/templates/index.html
+++ b/operator/templates/index.html
@@ -56,11 +56,7 @@
                 <h3 class="log-window-title">
                     Simulator logbook
                 </h3>
-                <div class="log-window">
-                    {% for item in logs %}
-                        <p>{{item}}</p>
-                    {% endfor %}
-                </div>
+                <div class="log-window"></div>
             </div>
         </div>
         {% endblock %}
