--- a/operator/templates/index.html
+++ b/operator/templates/index.html
@@ -35,21 +35,23 @@
             </div>
         </div>
         <div class="wrapper-bottom">
-            <div>
+            <div class="mission-selector">
                 <h3>
                     Mission selector
                 </h3>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="mission-select" id="autocross" value="autocross">
-                    <label class="form-check-label" for="team1">
-                        Autocross
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="mission-select" id="trackdrive" value="trackdrive">
-                    <label class="form-check-label" for="team2">
-                        Trackdrive
-                    </label>
+                <div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="mission-select" id="autocross" value="autocross">
+                        <label class="form-check-label" for="autocross">
+                            Autocross
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="mission-select" id="trackdrive" value="trackdrive">
+                        <label class="form-check-label" for="trackdrive">
+                            Trackdrive
+                        </label>
+                    </div>
                 </div>
             </div>
             <div>
