WIP: launch UE simulator from web gui

--- a/operator/templates/index.html
+++ b/operator/templates/index.html
@@ -31,6 +31,9 @@
                     {% endfor %}
                 </div>
             </div>
+            <div class="launch-simulator-button">
+                <button id="launch" type="button" class="btn btn-primary">LAUNCH simulator</button>
+            </div>
             <div class="start-button">
                 <button id="start" type="button" class="btn btn-primary">Send START signal</button>
             </div>
