GO and FINISHED signals

--- a/operator/templates/index.html
+++ b/operator/templates/index.html
@@ -44,7 +44,7 @@
             <div class="column">
                 <h5>Mission Control</h5>
                 <div class="interface-start-stop-button">
-                    <button id="start-stop" type="button" class="btn btn-primary" class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="Allow or disallow the selected team's AS to control the car">Send START signal</button>
+                    <button id="start-stop" type="button" class="btn btn-primary" class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="Allow or disallow the selected team's AS to control the car">Send GO signal</button>
                 </div>
             </div>
         </div>
