Final competition things

--- a/operator/templates/index.html
+++ b/operator/templates/index.html
@@ -106,6 +106,25 @@
                         </label>
                     </div>
                 </div>
+                <br />
+                <h5>
+                    Competition mode
+                </h5>
+                <div>
+                    <div class="custom-control custom-radio">
+                        <input class="custom-control-input" type="radio" name="compmode-select" id="comp-enabled" value="comp-enabled">
+                        <label class="custom-control-label" for="comp-enabled">
+                            Enabled (no ground truth topics)
+                        </label>
+                    </div>
+                    <div class="custom-control custom-radio">
+                        <input class="custom-control-input" type="radio" name="compmode-select" id="comp-disabled" value="comp-disabled">
+                        <label class="custom-control-label" for="comp-disabled">
+                            Disabled
+                        </label>
+                    </div>
+                </div>
+                <br />
             </div>
             <div>
                 <h5 class="log-window-title">
